infra/core-user-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    name: core-user
  name: core-user
spec:
  replicas: 1
  selector:
    matchLabels:
      name: core-user
  template:
    metadata:
      labels:
        network/backend: "true"
        name: core-user
    spec:
      containers:
        - image: todo-grpc/core-user
          imagePullPolicy: IfNotPresent
          name: core-user
          ports:
            - containerPort: 14586
      restartPolicy: Always
