infra/publicapi-auth-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    name: publicapi-auth
  name: publicapi-auth
spec:
  replicas: 1
  selector:
    matchLabels:
      name: publicapi-auth
  template:
    metadata:
      labels:
        network/backend: "true"
        network/dmz: "true"
        name: publicapi-auth
    spec:
      containers:
        - env:
            - name: EMAILSERVICE_ADDR
              valueFrom:
                configMapKeyRef:
                  key: EMAILSERVICE_ADDR
                  name: dev-variables-env
            - name: JWT_SECRET
              valueFrom:
                secretKeyRef:
                  key: JWT_SECRET
                  name: common-secrets
            - name: OAUTH_USER_SERVICE_ADDR
              valueFrom:
                configMapKeyRef:
                  key: OAUTH_USER_SERVICE_ADDR
                  name: dev-variables-env
            - name: REDIS_ADDR
              valueFrom:
                configMapKeyRef:
                  key: REDIS_ADDR
                  name: dev-variables-env
            - name: TODO_SERVICE_ADDR
              valueFrom:
                configMapKeyRef:
                  key: TODO_SERVICE_ADDR
                  name: dev-variables-env
            - name: URL_BASE_UI
              valueFrom:
                configMapKeyRef:
                  key: URL_BASE_UI
                  name: dev-variables-env
            - name: USER_SERVICE_ADDR
              valueFrom:
                configMapKeyRef:
                  key: USER_SERVICE_ADDR
                  name: dev-variables-env
          image: todo-grpc/publicapi-auth
          imagePullPolicy: IfNotPresent
          name: publicapi-auth
          ports:
            - containerPort: 14586
      restartPolicy: Always
