infra/publicapi-fileput-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    name: publicapi-fileput
  name: publicapi-fileput
spec:
  replicas: 1
  selector:
    matchLabels:
      name: publicapi-fileput
  template:
    metadata:
      labels:
        network/backend: "true"
        network/dmz: "true"
        name: publicapi-fileput
    spec:
      containers:
        - env:
            - name: FILE_SERVICE_ADDR
              valueFrom:
                configMapKeyRef:
                  key: FILE_SERVICE_ADDR
                  name: dev-variables-env
            - name: URL_BASE_UI
              valueFrom:
                configMapKeyRef:
                  key: URL_BASE_UI
                  name: dev-variables-env
          image: todo-grpc/publicapi-fileput
          imagePullPolicy: IfNotPresent
          name: publicapi-file
          ports:
            - containerPort: 14586
      restartPolicy: Always
