infra/workers-file-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    name: workers-file
  name: workers-file
spec:
  replicas: 1
  selector:
    matchLabels:
      name: workers-file
  strategy: {}
  template:
    metadata:
      labels:
        network/backend: "true"
        name: workers-file
    spec:
      containers:
        - env:
            - name: OAUTH_USER_SERVICE_ADDR
              valueFrom:
                configMapKeyRef:
                  key: OAUTH_USER_SERVICE_ADDR
                  name: dev-variables-env
            - name: REDIS_ADDR
              valueFrom:
                configMapKeyRef:
                  key: REDIS_ADDR
                  name: dev-variables-env
            - name: TODO_SERVICE_ADDR
              valueFrom:
                configMapKeyRef:
                  key: TODO_SERVICE_ADDR
                  name: dev-variables-env
            - name: URL_BASE_UI
              valueFrom:
                configMapKeyRef:
                  key: URL_BASE_UI
                  name: dev-variables-env
            - name: USER_SERVICE_ADDR
              valueFrom:
                configMapKeyRef:
                  key: USER_SERVICE_ADDR
                  name: dev-variables-env
            - name: FILE_SERVICE_ADDR
              valueFrom:
                configMapKeyRef:
                  key: FILE_SERVICE_ADDR
                  name: dev-variables-env
          image: todo-grpc/workers-file
          imagePullPolicy: IfNotPresent
          name: workers-file
      restartPolicy: Always
