infra/client-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    name: client
  name: client
spec:
  ports:
    - port: 80
  selector:
    name: client
