infra/core-file-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    name: core-file
  name: core-file
spec:
  selector:
    name: core-file
  ports:
    - port: 14586
