infra/core-oauth-user-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    name: core-oauth-user
  name: core-oauth-user
spec:
  ports:
    - port: 14586
  selector:
    name: core-oauth-user
