infra/core-user-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    name: core-user
  name: core-user
spec:
  selector:
    name: core-user
  ports:
    - port: 14586
