infra/dynamodb-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dynamodb
  labels:
    component: dynamodb
spec:
  selector:
    component: dynamodb
  ports:
    - port: 8000
