infra/publicapi-auth-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    name: publicapi-auth
  name: publicapi-auth
spec:
  selector:
    name: publicapi-auth
  ports:
    - port: 14586
