infra/publicapi-file-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    name: publicapi-file
  name: publicapi-file
spec:
  selector:
    name: publicapi-file
  ports:
    - port: 14586
