infra/publicapi-fileput-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    name: publicapi-fileput
  name: publicapi-fileput
spec:
  selector:
    name: publicapi-fileput
  ports:
    - port: 14586
