infra/publicapi-todo-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    name: publicapi-todo
  name: publicapi-todo
spec:
  selector:
    name: publicapi-todo
  ports:
    - port: 14586
