infra/publicapi-user-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    name: publicapi-user
  name: publicapi-user
spec:
  selector:
    name: publicapi-user
  ports:
    - port: 14586
