infra/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: client-ingress
  #annotations:
    #nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: client
                port:
                  number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: client-ingress-auth
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /twirp/api.auth.AuthenticationService/$1
spec:
  rules:
    - http:
        paths:
          - path: /api/v1/auth/(.*)
            pathType: Prefix
            backend:
              service:
                name: publicapi-auth
                port:
                  number: 14586
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: client-ingress-todo
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /twirp/api.todo.TodoService/$1
spec:
  rules:
    - http:
        paths:
          - path: /api/v1/todo/(.*)
            pathType: Prefix
            backend:
              service:
                name: publicapi-todo
                port:
                  number: 14586
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: client-ingress-wsapi
  # annotations:
  #   nginx.ingress.kubernetes.io/rewrite-target: /twirp/api.auth.AuthenticationService/$1
spec:
  rules:
    - http:
        paths:
          - path: /wsapi
            pathType: Prefix
            backend:
              service:
                name: publicapi-websocket
                port:
                  number: 14586
