infra/dmz-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: dmz
spec:
  ingress:
    - from:
        - podSelector:
            matchLabels:
              network/dmz: "true"
  podSelector:
    matchLabels:
      network/dmz: "true"
