infra/frontend-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: frontend
spec:
  ingress:
    - from:
        - podSelector:
            matchLabels:
              network/frontend: "true"
  podSelector:
    matchLabels:
      network/frontend: "true"
